--- a/static/style.css
+++ b/static/style.css
@@ -1,21 +1,21 @@
 body {
-    background: linear-gradient(to right, #6dd5fa, #2980b9);
-    font-family: Arial, sans-serif;
+    background-color: #5CB8E6;
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0;
 }
 
+
 .container {
-    background-color: white;
+    background: rgba(255, 255, 255, 0.9);  /* White background with some transparency */
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
     text-align: center;
-    max-width: 400px;
-    width: 100%;
 }
 
 h2 {
